kyverno/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  labels:
    app: reporting
spec:
  selector:
    matchLabels:
      app: reporting
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: reporting
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
