kyverno/require_requests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests
  annotations:
    policies.kyverno.io/title: Require requests
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Requests
    policies.kyverno.io/description: >-
      Setting requests on pods is considered best-practices in Kubernetes.            
spec:
  validationFailureAction: Audit # https://kyverno.io/docs/writing-policies/validate/#validation-failure-action
  background: true
  rules:
  - name: require-requests
    match:
      any:
      - resources:
          kinds:
          - Pod
          #namespaceSelector:
          #  matchLabels:
          #    policies.kyverno.io/annotation_required: "true"

    validate:
      message: "Requests for CPU and Memory are required."
      pattern:
        spec:
          containers:
          - resources:
              requests:
                memory: "?*"
                cpu: "?*"
